fix position of arrow on small devices

--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -216,10 +216,9 @@
 		}
 	}
 
-
 	.layoutblack .layout1spaltig_buehne_slider {
 		.slick-prev, .slick-next {
-			top: calc(50% - 120px);
+			top: 90px;
 		}
 
 		.slick-prev {
